# Winterval

./: .gitignore  CMakeLists.txt  readme.md  vcpkg-configuration.json  vcpkg.json
scripts/: update-deps
src/: CMakeLists.txt  Winterval.cpp  Winterval.h  Winterval.hpp  main.cpp
src/test/: test_winterval.cpp
test/: CMakeLists.txt  test_winterval.cpp
